--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/fonts.css" />
     <title>melvin thambi</title>
+    <script src="script.js" defer></script>
   </head>
   <body class="bg-gray-900 max-w-[100vw] overflow-x-hidden">
   
@@ -686,6 +687,5 @@
       </footer>
     </div>
       
-    <script src="script.js"></script>
   </body>
 </html>
